--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC202 - Atividade 05</title>
     <script src="montador.js" defer type="module"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 </body>
